# A2A-SWE-Bench

./: .dockerignore  .env.example  .gitignore  ACCOMPLISHMENTS.md  AGENTBEATS_SUBMISSION_CHECKLIST.md  AGENTBEATS_SUBMISSION_PLAN.md  CLAUDE_BENCHMARK_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.green  Dockerfile.purple  FINAL-REVIEW.md  FIX_CHECKLIST.md  GITHUB_READY.md  HONEST-ASSESSMENT.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  PHASE2-3-SUMMARY.md  PROGRESS.md  README.md  RUN_SWEBENCH_PLAN.md  STATUS.md  SYSTEM_STATUS.md  a2a_gpt4o_results_20260114_134634.json  a2a_gpt4o_results_20260114_134717.json  a2a_gpt4o_results_20260114_151133.json  a2a_gpt4o_results_20260114_162554.json  a2a_gpt4o_results_20260114_162638.json  a2a_gpt4o_results_20260114_162732.json  a2a_gpt4o_results_20260114_170433.json  a2a_gpt4o_results_20260115_003140.json  a2a_gpt4o_results_20260115_003735.json  a2a_gpt4o_results_20260115_004119.json  a2a_gpt4o_results_20260115_004250.json  a2a_gpt4o_results_20260115_004449.json  a2a_gpt4o_results_20260115_004653.json  a2a_gpt4o_results_20260115_012004.json  a2a_gpt4o_results_20260115_012819.json  a2a_gpt4o_results_20260115_012819_with_process_score.json  a2a_gpt4o_results_20260115_014109.json  (+93 more)
docker/: green.Dockerfile  purple.Dockerfile
k8s/: 00-namespace.yaml  01-configmap.yaml  02-secrets.yaml  03-databases.yaml  04-deployments.yaml  05-services.yaml  06-monitoring.yaml  07-ingress.yaml  08-autoscaling.yaml  09-network-policies.yaml  README.md  deploy.sh  kustomization.yaml
leaderboard/: README.md  agentbeats-config.json  (+2 more)
(+102 files in other folders)
